--- a/ide/frames/editor_wordwrap_options.lfm
+++ b/ide/frames/editor_wordwrap_options.lfm
@@ -2,11 +2,10 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
   Left = 0
   Height = 380
   Top = 0
-  Width = 428
-  ChildSizing.Layout = cclLeftToRightThenTopToBottom
+  Width = 387
   ChildSizing.ControlsPerLine = 2
   ClientHeight = 380
-  ClientWidth = 428
+  ClientWidth = 387
   TabOrder = 0
   DesignLeft = 599
   DesignTop = 61
@@ -18,7 +17,7 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     Left = 6
     Height = 19
     Top = 6
-    Width = 416
+    Width = 375
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Around = 6
     Caption = 'cbEnableWordWrap'
@@ -33,7 +32,7 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     Left = 6
     Height = 19
     Top = 31
-    Width = 416
+    Width = 375
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
     AutoSize = True
@@ -58,120 +57,74 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
     Left = 6
     Height = 19
     Top = 56
-    Width = 416
+    Width = 375
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Around = 6
     Caption = 'cbHomeEndKey'
-    TabOrder = 4
+    TabOrder = 2
   end
-  object DividerBevel1: TDividerBevel
+  object Panel1: TPanel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = cbHomeEndKey
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
     Left = 6
-    Height = 15
+    Height = 245
     Top = 81
-    Width = 416
-    Caption = 'DividerBevel1'
+    Width = 375
     Anchors = [akTop, akLeft, akRight]
-    BorderSpacing.Around = 6
-    Font.Style = [fsBold]
-    ParentFont = False
-  end
-  object Panel1: TPanel
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Panel2
-    AnchorSideBottom.Control = Panel2
-    AnchorSideBottom.Side = asrBottom
-    Left = 6
-    Height = 151
-    Top = 102
-    Width = 140
-    Anchors = [akTop, akLeft, akBottom]
     AutoSize = True
-    BorderSpacing.Left = 6
+    BorderSpacing.Around = 6
     BevelOuter = bvNone
-    ChildSizing.EnlargeVertical = crsSameSize
-    ChildSizing.ShrinkVertical = crsSameSize
+    ChildSizing.HorizontalSpacing = 6
+    ChildSizing.VerticalSpacing = 4
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 1
-    ClientHeight = 151
-    ClientWidth = 140
-    TabOrder = 2
+    ChildSizing.ControlsPerLine = 2
+    ClientHeight = 245
+    ClientWidth = 375
+    TabOrder = 3
+    object lblBevelColumn: TLabel
+      Left = 0
+      Height = 15
+      Top = 0
+      Width = 140
+      Caption = ' '
+    end
+    object lblBevelCol2: TLabel
+      Left = 146
+      Height = 15
+      Top = 0
+      Width = 60
+      Caption = ' '
+    end
+    object DividerBevelColumn: TDividerBevel
+      AnchorSideLeft.Control = Panel1
+      AnchorSideTop.Control = lblBevelColumn
+      AnchorSideRight.Control = Panel1
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 0
+      Width = 375
+      Caption = 'DividerBevelColumn'
+      Anchors = [akTop, akLeft, akRight]
+      Font.Style = [fsBold]
+      ParentFont = False
+    end
     object lbMinWordWrapWidth: TLabel
       Left = 0
       Height = 15
-      Top = 5
+      Top = 23
       Width = 140
       BorderSpacing.CellAlignVertical = ccaCenter
       Caption = 'lbMinWordWrapWidth'
     end
-    object lbWordWrapIndent: TLabel
-      Left = 0
-      Height = 15
-      Top = 30
-      Width = 140
-      BorderSpacing.CellAlignVertical = ccaCenter
-      Caption = 'lbWordWrapIndent'
-    end
-    object cbIndentIsOffset: TCheckBox
-      Left = 0
-      Height = 19
-      Top = 53
-      Width = 140
-      BorderSpacing.CellAlignVertical = ccaCenter
-      Caption = 'cbIndentIsOffset'
-      TabOrder = 0
-      OnChange = cbIndentIsOffsetChange
-    end
-    object lbWordWrapIndentMin: TLabel
-      Left = 0
-      Height = 15
-      Top = 81
-      Width = 140
-      BorderSpacing.CellAlignVertical = ccaCenter
-      Caption = 'lbWordWrapIndentMin'
-    end
-    object lbWordWrapIndentMax: TLabel
-      Left = 0
-      Height = 15
-      Top = 106
-      Width = 140
-      BorderSpacing.CellAlignVertical = ccaCenter
-      Caption = 'lbWordWrapIndentMax'
-    end
-    object lbWordWrapIndentMaxRel: TLabel
-      Left = 0
-      Height = 15
-      Top = 131
-      Width = 140
-      BorderSpacing.CellAlignVertical = ccaCenter
-      Caption = 'lbWordWrapIndentMaxRel'
-    end
-  end
-  object Panel2: TPanel
-    AnchorSideLeft.Control = Panel1
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = DividerBevel1
-    AnchorSideTop.Side = asrBottom
-    Left = 152
-    Height = 151
-    Top = 102
-    Width = 60
-    AutoSize = True
-    BorderSpacing.Left = 6
-    BevelOuter = bvNone
-    ClientHeight = 151
-    ClientWidth = 60
-    TabOrder = 3
     object edMinWordWrapWidth: TSpinEdit
-      AnchorSideTop.Control = Panel2
       AnchorSideRight.Side = asrBottom
-      Left = 0
+      Left = 146
       Height = 23
-      Top = 3
+      Top = 19
       Width = 60
       Alignment = taRightJustify
       BorderSpacing.Top = 3
@@ -180,16 +133,104 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
       Constraints.MinWidth = 60
       MaxValue = 9999
       MinValue = 1
+      TabOrder = 1
+      Value = 10
+    end
+    object lbMaxWordWrapWidth: TLabel
+      Left = 0
+      Height = 15
+      Top = 50
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbMaxWordWrapWidth'
+    end
+    object edMaxWordWrapWidth: TSpinEdit
+      AnchorSideRight.Side = asrBottom
+      Left = 146
+      Height = 23
+      Top = 46
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 9999
       TabOrder = 0
       Value = 10
     end
-    object edWordWrapIndent: TSpinEdit
-      AnchorSideTop.Control = edMinWordWrapWidth
-      AnchorSideTop.Side = asrBottom
+    object lblFixedCol: TLabel
+      Left = 0
+      Height = 15
+      Top = 73
+      Width = 140
+      BorderSpacing.Bottom = 8
+      Caption = ' '
+    end
+    object lblFixedCol2: TLabel
+      AnchorSideBottom.Side = asrBottom
+      Left = 146
+      Height = 15
+      Top = 73
+      Width = 60
+      Caption = ' '
+    end
+    object cbFixedWidth: TCheckBox
+      AnchorSideLeft.Control = Panel1
+      AnchorSideTop.Control = lblFixedCol
+      AnchorSideRight.Control = Panel1
       AnchorSideRight.Side = asrBottom
       Left = 0
+      Height = 19
+      Top = 73
+      Width = 375
+      Anchors = [akTop, akLeft, akRight]
+      Caption = 'cbFixedWidth'
+      TabOrder = 2
+      OnChange = cbFixedWidthChange
+    end
+    object lblBevelIndent: TLabel
+      Left = 0
+      Height = 15
+      Top = 96
+      Width = 140
+      Caption = ' '
+    end
+    object lblBevelIndent2: TLabel
+      Left = 146
+      Height = 15
+      Top = 96
+      Width = 60
+      Caption = ' '
+    end
+    object DividerBevelIndent: TDividerBevel
+      AnchorSideLeft.Control = Panel1
+      AnchorSideTop.Control = lblBevelIndent
+      AnchorSideRight.Control = Panel1
+      AnchorSideRight.Side = asrBottom
+      Left = 0
+      Height = 15
+      Top = 96
+      Width = 375
+      Caption = 'DividerBevelIndent'
+      Anchors = [akTop, akLeft, akRight]
+      Font.Style = [fsBold]
+      ParentFont = False
+    end
+    object lbWordWrapIndent: TLabel
+      Left = 0
+      Height = 15
+      Top = 119
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndent'
+    end
+    object edWordWrapIndent: TSpinEdit
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 146
       Height = 23
-      Top = 29
+      Top = 115
       Width = 60
       Alignment = taRightJustify
       BorderSpacing.Top = 3
@@ -198,61 +239,54 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
       Constraints.MinWidth = 60
       MaxValue = 100
       MinValue = -100
-      TabOrder = 1
-      Value = 10
-    end
-    object Label1: TLabel
-      AnchorSideTop.Control = edWordWrapIndent
-      AnchorSideTop.Side = asrBottom
-      Left = 0
-      Height = 15
-      Top = 55
-      Width = 3
-      BorderSpacing.Top = 3
-      BorderSpacing.Bottom = 3
-      Caption = ' '
-    end
-    object edWordWrapIndentMin: TSpinEdit
-      AnchorSideTop.Control = Label1
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Side = asrBottom
-      Left = 0
-      Height = 23
-      Top = 73
-      Width = 60
-      Alignment = taRightJustify
-      BorderSpacing.Top = 3
-      BorderSpacing.Bottom = 3
-      Constraints.MaxWidth = 60
-      Constraints.MinWidth = 60
-      MaxValue = 100
-      TabOrder = 2
-      Value = 10
-    end
-    object edWordWrapIndentMax: TSpinEdit
-      AnchorSideTop.Control = edWordWrapIndentMin
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Side = asrBottom
-      Left = 0
-      Height = 23
-      Top = 99
-      Width = 60
-      Alignment = taRightJustify
-      BorderSpacing.Top = 3
-      BorderSpacing.Bottom = 3
-      Constraints.MaxWidth = 60
-      Constraints.MinWidth = 60
-      MaxValue = 100
       TabOrder = 3
       Value = 10
     end
-    object edWordWrapIndentMaxRel: TSpinEdit
-      AnchorSideTop.Control = edWordWrapIndentMax
-      AnchorSideTop.Side = asrBottom
+    object lblIndentOffs: TLabel
+      Left = 0
+      Height = 15
+      Top = 142
+      Width = 140
+      BorderSpacing.Bottom = 8
+      Caption = ' '
+    end
+    object lblIndentOffs2: TLabel
+      Left = 146
+      Height = 15
+      Top = 142
+      Width = 60
+      BorderSpacing.Bottom = 8
+      Caption = ' '
+    end
+    object cbIndentIsOffset: TCheckBox
+      AnchorSideLeft.Control = Panel1
+      AnchorSideTop.Control = lblIndentOffs
+      AnchorSideRight.Control = Panel1
       AnchorSideRight.Side = asrBottom
       Left = 0
+      Height = 19
+      Top = 142
+      Width = 375
+      Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'cbIndentIsOffset'
+      TabOrder = 4
+      OnChange = cbIndentIsOffsetChange
+    end
+    object lbWordWrapIndentMin: TLabel
+      Left = 0
+      Height = 15
+      Top = 169
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMin'
+    end
+    object edWordWrapIndentMin: TSpinEdit
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 146
       Height = 23
-      Top = 125
+      Top = 165
       Width = 60
       Alignment = taRightJustify
       BorderSpacing.Top = 3
@@ -260,7 +294,55 @@ object EditorWordWrapOptionsFrame: TEditorWordWrapOptionsFrame
       Constraints.MaxWidth = 60
       Constraints.MinWidth = 60
       MaxValue = 100
-      TabOrder = 4
+      TabOrder = 5
+      Value = 10
+    end
+    object lbWordWrapIndentMax: TLabel
+      Left = 0
+      Height = 15
+      Top = 196
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMax'
+    end
+    object edWordWrapIndentMax: TSpinEdit
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 146
+      Height = 23
+      Top = 192
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      TabOrder = 6
+      Value = 10
+    end
+    object lbWordWrapIndentMaxRel: TLabel
+      Left = 0
+      Height = 15
+      Top = 223
+      Width = 140
+      BorderSpacing.CellAlignVertical = ccaCenter
+      Caption = 'lbWordWrapIndentMaxRel'
+    end
+    object edWordWrapIndentMaxRel: TSpinEdit
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Side = asrBottom
+      Left = 146
+      Height = 23
+      Top = 219
+      Width = 60
+      Alignment = taRightJustify
+      BorderSpacing.Top = 3
+      BorderSpacing.Bottom = 3
+      Constraints.MaxWidth = 60
+      Constraints.MinWidth = 60
+      MaxValue = 100
+      TabOrder = 7
       Value = 10
     end
   end
