TAChart: Add a simpler demo for a Gantt chart to the TStateSeries sample project.

--- a/components/tachart/demo/stateseries/main.lfm
+++ b/components/tachart/demo/stateseries/main.lfm
@@ -20,6 +20,9 @@ object MainForm: TMainForm
     object pgMachineStateChart: TTabSheet
       Caption = 'State plot'
     end
+    object pgSimpleGanttChart: TTabSheet
+      Caption = 'Simple Gantt plot'
+    end
     object pgGanttChart: TTabSheet
       Caption = 'Gantt plot'
     end
