--- a/ide/packages/idedebugger/breakpointsdlg.lfm
+++ b/ide/packages/idedebugger/breakpointsdlg.lfm
@@ -10,18 +10,20 @@ object BreakpointsDlg: TBreakpointsDlg
   Caption = 'Breakpoint list'
   ClientHeight = 205
   ClientWidth = 560
-  LCLVersion = '3.99.0.0'
+  LCLVersion = '4.99.0.0'
   Visible = True
   OnCreate = BreakpointsDlgCREATE
   object ToolBar1: TToolBar
     Left = 0
-    Height = 26
+    Height = 24
     Top = 0
     Width = 560
+    AutoSize = True
     Caption = 'ToolBar1'
     ParentShowHint = False
     ShowHint = True
     TabOrder = 0
+    Orientation = tboHorizontal
     object ToolButtonAdd: TToolButton
       Left = 1
       Top = 2
@@ -93,8 +95,8 @@ object BreakpointsDlg: TBreakpointsDlg
   end
   object tvBreakPoints: TDbgTreeView
     Left = 0
-    Height = 179
-    Top = 26
+    Height = 181
+    Top = 24
     Width = 560
     Align = alClient
     DefaultText = 'Node'
